--- a/a3/src/about.html
+++ b/a3/src/about.html
@@ -1,1 +1,13 @@
 <!-- Create your About page here. Make sure you include citations -->
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title>About</title>
+</head>
+
+<body>
+</body>
+
+</html>
