--- a/final/contact.html
+++ b/final/contact.html
@@ -209,9 +209,7 @@
               tabindex="10"
             />
             <small class="form-text text-muted">Optional</small>
-            <div class="invalid-feedback">
-              Enter a valid Seneca URL (using myseneca.ca or senecacollege.ca)
-            </div>
+            <div class="invalid-feedback">Enter a valid Seneca URL</div>
           </div>
         </div>
 
